--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <style>
       
       body {
-        font-family: Roboto, sans-serif;
-        background-color: #f9f9f9;
+        font-family: Roboto, Arial, sans-serif;
+        background-color: #fff;
         margin: 0;
         padding: 0;
+        font-size: 14px
       }
 
       .container {
         max-width: 900px;
         margin: 0 auto;
         background-color: #fff;
-        padding: 25px 20px 10px;
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+        padding: 20px 20px 10px;
+        page-break-inside: avoid;
       }
 
       .section-title {
@@ -69,7 +70,7 @@
 
       .job-period {
         width: 140px;
-        padding-right: 20px;
+        padding-right: 6px;
         flex-shrink: 0;
         white-space: nowrap;
       }
@@ -90,18 +91,18 @@
 
       .achievements {
         margin-top: 0px;
-        font-size: 16px;
+        font-size: 14px;
       }
 
       .achievements ul {
         padding-left: 20px;
-        margin-top: 10px;
-        margin-bottom: 8px;
+        margin-top: 6px;
+        margin-bottom: 6px;
         list-style-type: disc;
       }
 
       .achievements ul li {
-        margin-bottom: 5px;
+        padding-bottom: 2px;
       }
 
       .skills-list {
@@ -123,11 +124,7 @@
       .company-description {
         padding: 0 0 3px 0;
       }
-      @media print {
-        body {
-          zoom: 90%;
-        }
-      }
+
     </style>
   </head>
 
